--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ odt/protobuf-3.9.0
 mnistTest/MNIST_data
 odt/model/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz
 ref2tut/model/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz
+PI_Image/PiBuster09032019.img
