--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ mnistTest/MNIST_data
 odt/model/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz
 ref2tut/model/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz
 PI_Image/PiBuster09032019.img
+PI_Image/PiBuster09032019.iso
+PI_Image/PiBuster09032019.vdi
+PI_Image/PiBuster09032019.7z
